# project-memory

./: .gitignore  AGENTS.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: validate.yml
docs/: CONTEXT.md  COORDINATION.md  DECISIONS.md  DOCS_SPEC.md  DOMAIN.md  ENVIRONMENT.md  LOG.md  PLAN.md  PRINCIPLES.md  REPOSITORY.md  SKILL_SPEC.md  VIBE_READINESS.md  WORKFLOWS.md
docs/archive/: origin-scope-pivot.md
skills/init-project-memory/: SKILL.md
skills/init-project-memory/agents/: openai.yaml
skills/init-project-memory/assets/templates/addons/app/docs/: USER_FLOWS.md
skills/init-project-memory/assets/templates/addons/cloud/docs/: CLOUD_RUNBOOK.md
skills/init-project-memory/assets/templates/core/: AGENTS.md  PROJECT_STATUS.md
skills/init-project-memory/assets/templates/core/docs/: ENVIRONMENT.md  LOG.md  PLAN.md  PRINCIPLES.md  VIBE_READINESS.md
skills/init-project-memory/scripts/: compact_memory.py  diagnose_memory.py  migrate_agents.py
skills/project-memory/: SKILL.md
skills/project-memory/agents/: openai.yaml
skills/project-memory/assets/templates/core/: AGENTS.md  PROJECT_STATUS.md
skills/project-memory/assets/templates/core/docs/: CONTEXT.md  COORDINATION.md  DECISIONS.md  LOG.md  REPOSITORY.md
skills/project-memory/references/: maintenance-policy.md
skills/project-memory/scripts/: brief_memory.py  compact_memory.py  diagnose_memory.py  init_docs.py  inspect_project.py  memory_bridge.py  migrate_agents.py  migrate_context.py  project_memory_lib.py  status_sync_proposal.py
tests/: test_project_memory_scripts.py
(+18 files in other folders)
