[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-memory-skill"
version = "0.1.0"
description = "AGENTS-first project context router for AI-assisted development."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "ohgenius1997" }]
keywords = ["agents", "codex", "context", "memory", "skills"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = []

[project.urls]
Repository = "https://github.com/ohgenius1997/project-memory"

[tool.setuptools]
packages = []
